--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
+
+    <string-array name="default_random_quotes">
+        <item><blockquote>\"Surround yourself with only people who are going to lift you higher.\" - <footer>Oprah Winfrey</footer></blockquote></item>
+        <item><blockquote>\"All men who have achieved great things have been great dreamers.\" - <footer>Orison Swett Marden</footer></blockquote></item>
+        <item><blockquote>\"Creativity is intelligence having fun.\" - <footer>Albert Einstein</footer></blockquote></item>
+        <item><blockquote>\"No kind action ever stops with itself. One kind action leads to another. Good example is followed.\" - <footer>Amelia Earhart</footer></blockquote></item>
+    </string-array>
 </resources>
